Release 0.5.0
=============

  * Include values when sizing named tuples
    Reported by Paul Ellenbogen (#35), fixed by Chris Klaiber

  * Drop Python 2.5 and Python 3.1 support

  * Add support for Python 3.5

Release 0.4.3
=============

  * Add Django 1.9 support for DDT panel
    By Benjy (#30)

  * Handle untracked classes in tracker statistics
    By gbtami (#33)

  * Handle colons in process names gracefully
    By Dariusz Suchojad (#26)

  * Support types without __flags__ attribute in muppy (#24)

  * Fix documentation errors (#32, #28, #25)
    By gbtami, Matt, Lawrence Hudson

Release 0.4.2
=============

  * Include private variables within slots when sizing recursively
    GitHub issue #20 report and fix by ddodt

  * Fix NameError in memory panel
    GitHub issue #21 reported by relekang

Release 0.4.1
=============

  * Replace Highcharts with Flot (#17)

Release 0.4
===========

  * Include size of closure variables
    GitHub issue #8 reported and implemented by Craig Silverstein
  
  * Format tracker statistics without printing
    GitHub issue #2 reported and implemented by Andrei Sosnin

  * Fix tkinter import on Python 3
    GitHub issue #4 reported by pedru-de-huere

  * Fix `StreamBrowser.print_tree` when called without arguments
    GitHub issue #5 reported by pedru-de-huere

  * Add memory panel for django-debug-toolbar

  * Track instance counts of tracked classes without snapshots

  * Add close method to ClassTracker

  * Upgrade to Highcharts 3 and jQuery 1.10

  * Add support for Python 3.4, drop support for Python 2.4

  * Fix sizing of named tuples
    GitHub issue #10 reported by ceridwen


Release 0.3.1
=============

  * Fix class tracker graph data formatting
    Issue 48 reported by Berwyn Hoyt

  * Improve web class tracker documentation
    Issue 49 reported by Berwyn Hoyt

  * Update links to GitHub and PyPi


Release 0.3.0
=============

  * Support for Python 3.3


Release 0.2.2
=============
