@@ -5,12 +5,12 @@ This information is used in setup.py as well as in doc/source/conf.py.
 """
 
 project_name = 'Pympler'
-version      = '0.5a1'
+version      = '0.5'
 url          = 'http://pythonhosted.org/Pympler/'
 license      = 'Apache License, Version 2.0'
 author       = 'Jean Brouwers, Ludwig Haehne, Robert Schuppenies'
 author_email = 'pympler-dev@googlegroups.com'
-copyright    = '2008-2016, ' + author
+copyright    = '2008-2017, ' + author
 description  = ('A development tool to measure, monitor and analyze '
                 'the memory behavior of Python objects.')
 long_description = '''
@@ -32,5 +32,5 @@ visualisation and class tracker statistics.
 
 Pympler is written entirely in Python, with no dependencies to
 external libraries. It has been tested with Python 2.6, 2.7,
-3.2, 3.3, 3.4, 3.5 on Linux, Windows and MacOS X.
+3.2, 3.3, 3.4, 3.5, 3.6 on Linux, Windows and MacOS X.
 '''
