@@ -119,6 +119,7 @@ def run_setup(include_tests=0):
                        'Programming Language :: Python :: 3.3',
                        'Programming Language :: Python :: 3.4',
                        'Programming Language :: Python :: 3.5',
+                       'Programming Language :: Python :: 3.6',
                        'Topic :: Software Development :: Bug Tracking',
                        ],
           cmdclass={'try': PreinstallTestCommand,
