@@ -1,12 +1,15 @@
 Release 0.5.0
 =============
 
+  * Improved runtime performance of summary differ
+    By Matt Perpick (#42)
+
   * Include values when sizing named tuples
     Reported by Paul Ellenbogen (#35), fixed by Chris Klaiber
 
   * Drop Python 2.5 and Python 3.1 support
 
-  * Add support for Python 3.5
+  * Add support for Python 3.5 and Python 3.6
 
 Release 0.4.3
 =============
